[gd_scene load_steps=4 format=3 uid="uid://04o60qfqg0y7"]

[ext_resource type="Script" uid="uid://1t7q43xh5bb4" path="res://player/pacman.gd" id="1_xv0j0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xv0j0"]
size = Vector2(16, 16)

[sub_resource type="QuadMesh" id="QuadMesh_xv0j0"]
size = Vector2(16, 16)

[node name="pacman" type="CharacterBody2D"]
collision_layer = 256
collision_mask = 29184
script = ExtResource("1_xv0j0")
metadata/_edit_group_ = true

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xv0j0")

[node name="mesh1" type="MeshInstance2D" parent="."]
modulate = Color(1, 0, 1, 1)
mesh = SubResource("QuadMesh_xv0j0")

[node name="mesh2" type="MeshInstance2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(5, 5)
scale = Vector2(0.12499999, 0.12499999)
mesh = SubResource("QuadMesh_xv0j0")

[node name="mesh3" type="MeshInstance2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(5, -5)
scale = Vector2(0.12499999, 0.12499999)
mesh = SubResource("QuadMesh_xv0j0")

[node name="raycast_up" type="RayCast2D" parent="."]
unique_name_in_owner = true
top_level = true
target_position = Vector2(0, -16)
collision_mask = 4096

[node name="raycast_down" type="RayCast2D" parent="."]
unique_name_in_owner = true
top_level = true
target_position = Vector2(0, 16)
collision_mask = 4096

[node name="raycast_left" type="RayCast2D" parent="."]
unique_name_in_owner = true
top_level = true
target_position = Vector2(-16, 0)
collision_mask = 4096

[node name="raycast_right" type="RayCast2D" parent="."]
unique_name_in_owner = true
top_level = true
target_position = Vector2(16, 0)
collision_mask = 4096

[node name="raycast_front" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(16, 0)
collision_mask = 4096

[node name="raycast_back" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(-16, 0)
collision_mask = 4096

[node name="raycast_east" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(0, -16)
collision_mask = 4096

[node name="raycast_west" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(0, 16)
collision_mask = 4096
